@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Module-Signature
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Module-Signature/ChangeLog,v 1.42 2013/08/20 10:56:23 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Module-Signature/ChangeLog,v 1.43 2013/08/21 11:11:26 zlogene Exp $
+
+  21 Aug 2013; Mikle Kolyada <zlogene@gentoo.org>
+  Module-Signature-0.730.0.ebuild:
+  amd64/x86 stable wrt bug #472428
 
 *Module-Signature-0.730.0 (20 Aug 2013)
 
